# myrient-browser

./: .gitignore  LICENSE  README.md  SYNC_SCRIPTS.md  cleanup_downloads.sh  config.example.toml  config.toml  pyproject.toml  sync_to_nas.sh
directory/: sample_index.json
docs/: GITHUB_GUIDE.md
src/myrient_browser/: __init__.py  cli.py  config.py  downloader.py  exporter.py  indexer.py  nas_verify.py  state.py  tui.py
tests/: __init__.py  test_config.py  test_downloader.py  test_exporter.py  test_indexer.py  test_state.py
